# saas_security_checker

./: .gitignore  COMPLETE_SOLUTION.md  COMPLETE_SOLUTION_WITH_DNS.md  DNSSEC_ENABLEMENT_GUIDE.md  DNS_HIJACKING_PREVENTION.md  PACKET_SNIFFING_PREVENTION.md  QUICKSTART.md  RCE_TESTING_GUIDE.md  README.md  ZAP_INTEGRATION_GUIDE.md  ZAP_JAVA_INTEGRATION_GUIDE.md  compile_java_modules.sh  config.yaml  demo_zap_integration.py  dnssec_helper.py  example.py  install.sh  java_execution_methods.py  main.py  pyproject.toml  rce_example.py  requirements.txt  test_archaive_rce.py  test_rce_accuracy.py  test_zap_integration.py  zap_example.py
java_security_modules/: CommandInjectionScanner.java  CsrfScanner.java  DirectoryTraversalScanner.java  SqlInjectionScanner.java  XssScanner.java  ZapRunner.java  ZapSecurityTester.java  _init__.py
reporting/: report_generator.py
reports/: security_report_20250923_020519.html  security_report_20250923_020519.json  security_report_20250923_023056.html  security_report_20250923_023056.json  security_report_20250923_024439.html  security_report_20250923_024439.json
security_modules/: __init__.py  auth_security.py  dependency_checker.py  dns_checks.py  dns_hijacking_prevention.py  http_headers.py  packet_sniffing_prevention.py  password_checker.py  port_discovery.py  rce_tester.py  sql_injection.py  tls_security.py  web_scanner.py  zap_integration.py  zap_java_integration.py
zap_java_modules/: __init__.py  zap_java_tester.py
