[project]
name = "saas-security-checker"
version = "1.0.0"
description = "Comprehensive SaaS security testing tool"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31.0",
    "python-nmap>=0.7.1",
    "dnspython>=2.4.2",
    "cryptography>=41.0.0",
    "colorama>=0.4.6",
    "rich>=13.0.0",
    "pyyaml>=6.0.1",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "python-whois>=0.7.3",
    "sslyze>=5.0.0",
]

[project.scripts]
saas-security-checker = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["security_modules", "reporting"]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
